Revamp Convert module
- Converters are no more
- Replaced by CsvSamplesReader
- Streamlined Samples creation so they can be created from sources
  other than Jmeter
  - Via ListSamples
  - Additional Samples source: LoadyMcLoadface
  - Additional Samples source: Avro
    - Originally there was a converter from CSV to Avro, and a
      converter from Avro to CSV, but there wasn't a way to just
      get Samples from Avro without backend conversions.
- Removed support for headerless Jmeter CSV files
- Added Tabular data for converters as a preview feature
  - Effort for Csvs, Avros
- Simplified downloading of Samples from Avro to CSV-JTL
  - also *speeds up* the conversion by over double the rate.